After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728617 - Can't move window offscreen
Can't move window offscreen
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-04-20 17:33 UTC by Miroslav Puda
Modified: 2014-04-22 14:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Make the Move / Resize window menu items behave like the keybind (1.39 KB, patch)
2014-04-21 17:50 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Miroslav Puda 2014-04-20 17:33:36 UTC
I can't find a way how to move window over top corner of the screen. With cursor it will maximize window... with `M-Space m` shortcut it won't move window over the main toolbar.

This limits/disables use of applications that must have bigger size that screen resolution or must run inside other window (Wine).
Comment 1 Jasper St. Pierre (not reading bugmail) 2014-04-20 17:54:18 UTC
Due to a bug, selecting the Move item from the window menu behaves differently from its proper accelerator, Alt+F7, which will allow you to move the window off-screen.

You can also use Super+Left-mouse-click to move the window as well.
Comment 2 Jasper St. Pierre (not reading bugmail) 2014-04-21 17:50:02 UTC
Created attachment 274829 [details] [review]
window: Make the Move / Resize window menu items behave like the keybind

The Alt+F7 and Alt+F8 keybinds for moving and resizing windows allow you
to move and resize the window off the screen, so allow the same for the
menu items as well, since they're marked with the same accelerator.
Comment 3 Miroslav Puda 2014-04-21 19:47:09 UTC
Thank you very much - `M-F7` works.
Comment 4 Rui Matos 2014-04-22 09:47:44 UTC
Review of attachment 274829 [details] [review]:

I guess it could be argued that using the menu entry is a "frame_action" since the menu is usually accessed from the frame. But since that's not always true given the menu keybinding and, as you point out, it's inconsistent with what the menu labels say, I think this is fine.

i.e. "frame_action" really just means "the user is click dragging the window".
Comment 5 Jasper St. Pierre (not reading bugmail) 2014-04-22 14:52:15 UTC
"frame_action" literally just means "can the user can move/resize the window off-screen?" It's only checked in that one spot.